Update example code in jupyter notebook.ipynb

--- a/example code in jupyter notebook.ipynb
+++ b/example code in jupyter notebook.ipynb
@@ -46,8 +46,8 @@
    "outputs": [],
    "source": [
     "#参数\n",
-    "login=\"mysql+mysqldb://root:Sqq123456!@localhost/houhan2018?charset=utf8\"\n",
-    "path=r'C:\\Users\\Administrator\\Desktop\\test.xlsx'"
+    "login=\"mysql+mysqldb://user:password@host/database?charset=utf8\"\n",
+    "path=r'test.xlsx'"
    ]
   },
   {
